tests/error/enum_errors/call_variant_from_variant1.err
Error: Attribute not found (at $FILE:16:6)
   | 
14 | def fun() -> None:
15 |     l = MyEnum.Left()
16 |     l.Right()
   |       ^^^^^ `MyEnum` has no method `Right`

Guppy compilation failed due to 1 previous error
